--- a/frontend/src/app/overview/overview.component.html
+++ b/frontend/src/app/overview/overview.component.html
@@ -23,6 +23,8 @@
 </table>
 
 <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                [length]="totalItems"
+                [pageSize]="5"
                  showFirstLastButtons
                  aria-label="Select page of boats">
   </mat-paginator>
