--- a/frontend/src/app/overview/overview.component.css
+++ b/frontend/src/app/overview/overview.component.css
@@ -17,3 +17,9 @@ table {
     text-align: center;
     white-space: nowrap;
 }
+
+.error-snackbar {
+    background-color: #e53935;
+    color: white;
+    font-weight: bold;
+}
