improved frontend layout

--- a/frontend/src/app/detail/detail.component.html
+++ b/frontend/src/app/detail/detail.component.html
@@ -2,8 +2,10 @@
     <mat-card-content *ngIf="!isEdit">
         <p>Name: {{boat?.name}} </p>
         <p>Description: {{boat?.description}}</p>
-        <button mat-flat-button color="primary" type="button" class="mt-2" (click)="onBack()">Back</button>
-        <button mat-flat-button color="primary" type="button" (click)="isEdit = true">Edit</button>  
+        <div class="button-row">
+            <button mat-flat-button color="primary" type="button" class="mt-2" (click)="onBack()">Back</button>
+            <button mat-flat-button color="primary" type="button" (click)="isEdit = true">Edit</button>  
+        </div>
     </mat-card-content>
     <mat-card-content *ngIf="isEdit">
         <form #formRef="ngForm">
@@ -15,8 +17,10 @@
                 <mat-label>Description</mat-label>
                 <input matInput name="desc" type="text" [(ngModel)]="boat!.description">
             </mat-form-field>
-            <button mat-flat-button color="primary" type="button" class="mt-2" (click)="onCancel(formRef)">Cancel</button>
-            <button mat-flat-button color="primary" type="button" class="mt-2" (click)="onSave()">save</button> 
+            <div class="button-row">
+                <button mat-flat-button color="primary" type="button" class="mt-2" (click)="onCancel(formRef)">Cancel</button>
+                <button mat-flat-button color="primary" type="button" (click)="onSave()">Save</button> 
+            </div>
         </form>
     </mat-card-content>
 </mat-card>
