added frontend tests

--- a/frontend/src/app/boat-dialog/boat-dialog.component.html
+++ b/frontend/src/app/boat-dialog/boat-dialog.component.html
@@ -2,20 +2,20 @@
 <mat-dialog-content>
     <mat-form-field>
       <mat-label>Name</mat-label>
-      <input matInput #name="ngModel" [(ngModel)]="boat.name" required/>
+      <input id="name" matInput #name="ngModel" [(ngModel)]="boat.name" required/>
       <mat-error *ngIf="name.invalid && name.touched">
         <span *ngIf="name.errors?.['required']">Name is required.</span>
     </mat-error>
     </mat-form-field>
     <mat-form-field>
         <mat-label>Description</mat-label>
-        <input matInput #description="ngModel" [(ngModel)]="boat.description" required>
+        <input id="description" matInput #description="ngModel" [(ngModel)]="boat.description" required>
         <mat-error *ngIf="description.invalid && description.touched">
             <span *ngIf="description.errors?.['required']">Description is required.</span>
         </mat-error>
     </mat-form-field>
   </mat-dialog-content>
   <mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">Cancel</button>
-    <button mat-button [mat-dialog-close]="boat" cdkFocusInitial [disabled]="description.invalid || name.invalid">Ok</button>
+    <button id="cancelbutton" mat-button (click)="onNoClick()">Cancel</button>
+    <button id="okbutton" mat-button (click)="onOkClick()" cdkFocusInitial [disabled]="description.invalid || name.invalid">Ok</button>
   </mat-dialog-actions>
